<?xml version="1.0" encoding="utf-8"?>
<!--EJEMPLO DE CONSTRUCCIÓN DE UNA PANTALLA CON CONSTRAINT-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margen_generico_pantalla"
    android:layout_marginEnd="@dimen/margen_generico_pantalla"
    tools:context=".examples.OnboardingExample">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/onboarding_img"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_header" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboarding_titulo"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/onboarding_title"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_img" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboarding_subtitulo"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboariding_subtitulo"
        android:textSize="14sp"
        app:fontFamily="@font/nunito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_titulo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/onboarding_paginacion_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_subtitulo"
        app:srcCompat="@drawable/ic_pagination" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboarding_skip_btn"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/shape_skip_btn"
        android:text="@string/onboarding_skip_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onboarding_next_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_paginacion_img"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboarding_next_btn"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_next_btn"
        android:text="@string/onboarding_next_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/onboarding_skip_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onboarding_skip_btn"
        app:layout_constraintTop_toTopOf="@+id/onboarding_skip_btn"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>