<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".examples.SimpleConstraint">

    <!--AGREGAR UNA IMAGEN Y EL TEXTO ANCLADO A LA IMAGEN-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ejemplo_anclar_imagen_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/simple_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/simple_titulo"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/simple_ejemplo_titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/simple_img"
            app:layout_constraintTop_toTopOf="@+id/simple_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--AGREGAR BOTONES EN HORIZONTAL-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ejemplo_btn_en_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ejemplo_anclar_imagen_texto">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_izquierdo"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/btn_izquierdo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_derecho"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/btn_derecho"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_izquierdo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>